[package]
name = "i_mesh"
version = "0.2.0"
edition = "2024"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
description = "Mesh generation library"
license = "MIT"
repository = "https://github.com/iShape-Rust/iMesh"

[dependencies]
#i_float = { path = "../../iFloat" }
i_triangle = { path = "../../iTriangle/iTriangle" }
#i_triangle = "^0.29.1"